--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,54 @@
+#app{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+.nav-link{
+    padding-left:8px;
+    padding-right:8px;
+}
+
+#articles{
+    padding-top: 30px;
+    display:flex;
+    flex-direction: column;
+}
+
+#sort-by{
+    display:flex;
+    flex-direction: row-reverse;
+    margin-bottom:10px;
+}
+
+#sort-by label{
+    order:1;
+    padding-right:10px;
+}
+
+#article-list-tile{
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    width: 40vw;
+    border: 1px solid gray;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    text-decoration: none;
+    color:black;
+}
+
+.article-details{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+}
+
+
 #nav-arrows{
     display:flex;
     flex-direction: row;
+    justify-content: space-between;
 }
+
