--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 #sort-by{
     display:flex;
     flex-direction: row-reverse;
+    align-items:baseline;
     margin-bottom:10px;
 }
 
@@ -29,8 +30,9 @@
 #article-list-tile{
     display:flex;
     flex-direction: column;
+    flex-wrap:wrap;
     align-items:center;
-    width: 40vw;
+    width: 60vw;
     border: 1px solid gray;
     border-radius: 20px;
     margin-bottom: 30px;
@@ -42,10 +44,12 @@
 }
 
 .article-details{
-    width:100%;
     display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
+    flex-wrap:wrap;
+    flex-direction:column;
+    justify-content: space-between;
+    width:100%;
+    border: 1px solid black;
 }
 
 #nav-arrows{
@@ -59,7 +63,7 @@
     flex-direction:column;
     flex-wrap:wrap;
     align-items:center;
-    width:50vw;
+    width:80vw;
     border: 1px solid gray;
     border-radius:20px;
 }
@@ -67,8 +71,8 @@
 .comment{
     display:flex;
     flex-direction: column;
-    flex-wrap:nowrap;
-    width:35vw;
+    flex-wrap:wrap;
+    width:60vw;
     border: 1px solid gray;
     border-radius: 20px;
     margin-bottom: 30px;
