--- a/src/styles/articles.module.css
+++ b/src/styles/articles.module.css
@@ -6,6 +6,8 @@
 .articlesAllTiles{
     display:flex;
     flex-direction:column;
+    flex-wrap:wrap;
+    justify-content: center;
 }
 
 @media only screen and (min-width: 600px){
